--- a/_patterns/buttons/addtocart.html
+++ b/_patterns/buttons/addtocart.html
@@ -1,1 +1,1 @@
-<a class="addtocart island-1-2 btn max-width right" href="#">Add to Cart</a>
+<a class="addtocart island-1-2 btn max-width text-center" href="#">Add to Cart</a>
