--- a/_patterns/sections/sections.html
+++ b/_patterns/sections/sections.html
@@ -1,32 +1,39 @@
-<div class="grid left gutter-2 pad-t-2">
-  <figure role="group">
-    <img alt="" class="unit xs-1 s-1 m-1-2 l-1-2 img-flex push-0" src="/images/hoodie-black.png" aria-details="black-hoodie">
+<div class="pad-t-1-2">
+<div class="unit xs-1 s-1 m-1-2 l-1-2 grid left">
+  <figure role="group" class="img-flex push-0">
+    <h3 class="push-0 pad-b-1-2 left gutter">Black Wonderland Hoodie</h3>
+    <img class="black-hoodie" alt="" src="/images/hoodie-black.png" aria-details="black-hoodie">
+    <figcaption class="mega left gutter"><strong>$ 69.99</strong></figcaption>
   </figure>
-
-<div class="unit xs-1 s-1 m-1-2 l-1-2 left gutter-2 pad-t-2">
-<h3 class="push-0 pad-b-1-2">Black Wonderland Hoodie</h3>
 </div>
-<table class="unit xs-1 s-1 m-1-2 l-1-2 left gutter-2 pad-t-2">
+
+<div>
+<table class="unit xs-1 s-1 m-1-2 l-1-2 pad-t-2">
     <thead>
-      <tr>
+      <tr class="center gutter">
         <th scope="col">Fabric</th>
-        <th class="section-price right" scope="col">$69.99</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td colspan="3">Bamboo</td>
+        <td colspan="3">50%</td>
       </tr>
       <tr>
         <td colspan="3">Cotton</td>
+        <td colspan="3">25%</td>
       </tr>
       <tr>
         <td colspan="3">Silk</td>
+        <td colspan="3">25%</td>
       </tr>
     </tbody>
     <tfoot>
-        <th>{% pattern forms/quantity %}</th>
-        <td>{% pattern buttons/addtocart %}</td>
+      <tr class="center">
+        <td colspan="3">{% pattern forms/quantity %}</td>
+        <td colspan="3">{% pattern buttons/addtocart %}</td>
+      </tr>
     </tfoot>
   </table>
+  </div>
   </div>
