--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -3,10 +3,10 @@
   <div class="unit xs-1">
     <nav class="topnav island-1-4">
       <ul class="push-0">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/index/">Home</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/products/">Products</a></li>
+        <li><a href="/contact/">Contact</a></li>
 
         <div class="search-container">
           <form class="search-form flex-row">
