--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -30,7 +30,7 @@
 
   <div class="unit xs-1">
     <div class="title grid gutter-2 pad-b">
-      <img class="inline-block unit xs-1 s-1 m-1-4 l-1-4 xl-1-4" src="/images/logo.svg" alt="">
+      <img class="logo inline-block unit xs-1 s-1 m-1-4 l-1-4 xl-1-4" src="/images/logo.svg" alt="">
       <h1 class="unit xs-1 s-1 m-3-4 l-3-4 xl-3-4 push-0 inline-block island-1-2 text-center gutter-2">Mythological Creature Market</h1>
     </div>
   </div>
